--- a/.github/workflows/deply.yml
+++ b/.github/workflows/deply.yml
@@ -10,6 +10,10 @@ jobs:
         steps:
             - name: Checkout
               uses: actions/checkout@v4
+            - name: Install kubectl
+              uses: azure/setup-kubectl@v2.0
+              id: install
+              
             - name: Configure AWS credential
               uses: aws-actions/configure-aws-credentials@v1
               with:
