--- a/.github/workflows/deply.yml
+++ b/.github/workflows/deply.yml
@@ -38,7 +38,7 @@ jobs:
             
                 # IDK about this??
             - name: Update k8s deployment
-              run: aws eks update-kubeconfig --name eks-cluster --region eu-west-1
+              run: aws eks update-kubeconfig --name eks --region eu-west-1
 
             - name: Deploy to EKS
               run: |
