--- a/example.services.user/k8s/user-deployment.yaml
+++ b/example.services.user/k8s/user-deployment.yaml
@@ -20,10 +20,9 @@ spec:
           imagePullPolicy: Always
           ports:
             - containerPort: 3000
-          # resources:
-          #   limits:
-          #     cpu: "1"
-          #     memory: "512Mi"
-          #   requests:
-          #     cpu: "0.5"
-          #     memory: "256Mi"
+          env:
+            - name: DB_CONNECTION
+              valueFrom:
+                secretKeyRef:
+                  name: user-secrets
+                  key: db-connection
