--- a/.github/workflows/deploy-user.yml
+++ b/.github/workflows/deploy-user.yml
@@ -45,3 +45,4 @@ jobs:
               run: |
                 kubectl apply -f ./example.services.user/k8s/user-deployment.yaml
                 kubectl apply -f ./example.services.user/k8s/user-service.yaml
+                kubectl apply -f ./example.services.user/k8s/user-ingress.yaml
