--- a/example.services.user/k8s/user-deployment.yaml
+++ b/example.services.user/k8s/user-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: user-deployment
+  namespace: kube-public
   labels:
     app: user
 spec:
@@ -26,3 +27,10 @@ spec:
                 secretKeyRef:
                   name: user-secrets
                   key: db-connection
+          resources:
+            limits:
+              cpu: "1"
+              memory: "512Mi"
+            requests:
+              cpu: "100m"
+              memory: "256Mi"
