--- a/example.services.user/k8s/user-ingress.yaml
+++ b/example.services.user/k8s/user-ingress.yaml
@@ -1,13 +1,12 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: my-ingress
+  namespace: kube-public
+  name: user-ingress
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /$1
     nginx.ingress.kubernetes.io/use-regex: "true"
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
-    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
 spec:
   rules:
   - http:
@@ -19,10 +18,3 @@ spec:
             name: user-service
             port:
               number: 80
-      # - path: /product(/|$)(.*)
-      #   pathType: Prefix
-      #   backend:
-      #     service:
-      #       name: product-service
-      #       port:
-      #         number: 80
