--- a/example.services.user/k8s/user-deployment.yaml
+++ b/example.services.user/k8s/user-deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: user
-          image: 718466725446.dkr.ecr.eu-west-1.amazonaws.com/bar:latest
+          image: adrianhawkinss/test:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 3000
