--- a/.github/workflows/deploy-user.yml
+++ b/.github/workflows/deploy-user.yml
@@ -41,6 +41,12 @@ jobs:
 
 # Each individual service will have its own deployment and service file
 # This is an example of how to deploy a service to EKS
+            - name: Remove old deployment
+              run: |
+                kubectl delete -f ./example.services.user/k8s/user-deployment.yaml
+                kubectl delete -f ./example.services.user/k8s/user-service.yaml
+                kubectl delete -f ./example.services.user/k8s/user-ingress.yaml
+            
             - name: Deploy to EKS
               run: |
                 kubectl apply -f ./example.services.user/k8s/user-deployment.yaml
